--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-DB_URL = "mongodb://127.0.0.1:27017/Taskify"
+DB_URL = mongodb+srv://r:Tasleem@cluster0.ksgue.mongodb.net/taskify?retryWrites=true&w=majority
 PORT = 8081
+SECRET="NOTHINGISSECRET"
