--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1"
+  },
+  "scripts": {
+    "start": "nodemon server.js" 
   }
 }
