--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
-DB_URL = mongodb+srv://r:Tasleem@cluster0.ksgue.mongodb.net/taskify?retryWrites=true&w=majority
+DB_URL = mongodb+srv://FARMAN:FARMAN@cluster0.ksgue.mongodb.net/taskify?retryWrites=true&w=majority
 PORT = 8081
 SECRET="NOTHINGISSECRET"
+CLD_CLIENT_NAME=do7al7kak
+CLD_CLIENT_API=929863315895631
+CLD_CLIENT_SECRET=Uy-_egMBl3z-01gZzqkot86wpJ4
