--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.4",
     "motion": "^10.16.4",
     "postcss": "^8.4.32",
+    "postcss-normalize": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
